# WebVision

./: .gitignore  app.py  constants.py  graph.py  logger.py  main.py  mark_page.js  nodes.py  prompt.py  pyproject.toml  requirements.txt  requirements1.txt  shared_state.py  state.py  target_profile.py  tools.py  utils.py
templates/: index.html
