[tool.poetry]
name = "Web-navigator-service"
version = "0.1.0"
description = "Web-Nav"
authors = ["Devesh"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
httpx = {extras = ["cli"], version = "^0.27.0"}
flask = "^2.1.1"
aiohttp = "3.9.1"
aiosignal = "1.3.1"
anyio = "3.7.1"
attrs = "23.1.0"
backoff = "2.2.1"
bcrypt = "4.1.2"
beautifulsoup4 = "4.12.2"
boto3 = "1.35.63"
botocore = "1.35.63"
burp = "1.27"
cachetools = "5.3.2"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
chroma-hnswlib = "0.7.3"
chromadb = "0.4.17"
click = "8.1.7"
coloredlogs = "15.0.1"
dataclasses-json = "0.6.3"
deprecated = "1.2.14"
distro = "1.9.0"
dnspython = "2.4.2"
fastapi = "0.108.0"
filelock = "3.13.1"
flatbuffers = "23.5.26"
frozenlist = "1.4.1"
fsspec = "2023.12.2"
google-auth = "2.25.2"
googleapis-common-protos = "1.62.0"
greenlet = "2.0.2"
grpcio = "1.60.0"
h11 = "0.14.0"
httpcore = "1.0.2"
httptools = "0.6.1"
huggingface-hub = ">=0.23.2,<1.0"
humanfriendly = "10.0"
idna = "3.6"
importlib-metadata = "6.11.0"
importlib-resources = "6.1.1"
jmespath = "1.0.1"
joblib = "1.3.2"
jsonpatch = "1.33"
jsonpointer = "2.4"
kubernetes = "28.1.0"
llama-index = "0.9.22"
marshmallow = "3.20.1"
monotonic = "1.6"
mpmath = "1.3.0"
multidict = ">=6.0.4,<6.1.0"
mypy-extensions = "1.0.0"
nest-asyncio = "1.5.8"
nltk = "3.8.1"
numpy = "1.26.2"
oauthlib = "3.2.2"
onnxruntime = "1.16.3"
openai = "^1.38"
opentelemetry-api = "1.22.0"
opentelemetry-exporter-otlp-proto-common = "1.22.0"
opentelemetry-exporter-otlp-proto-grpc = "1.22.0"
opentelemetry-proto = "1.22.0"
opentelemetry-sdk = "1.22.0"
opentelemetry-semantic-conventions = "0.43b0"
overrides = "7.4.0"
packaging = "23.2"
pandas = "2.1.4"
posthog = "3.1.0"
protobuf = "4.25.1"
pulsar-client = "^3.0.0"
pyasn1 = "0.5.1"
pyasn1-modules = "0.3.0"
pydantic = "^2.7.4"
pymongo = "4.9"
pync = "2.0.3"
python-dateutil = "2.8.2"
python-decouple = "3.8"
python-dotenv = "1.0.0"
pytz = "2023.3.post1"
pyyaml = ">=6.0.0"
regex = "2023.12.25"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
rsa = "4.9"
s3transfer = "0.10.0"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.5"
sqlalchemy = "2.0.24"
starlette = "0.32.0.post1"
sympy = "1.12"
tenacity = "8.2.3"
tiktoken = ">=0.7,<1"
tokenizers = ">=0.19,<0.20"
tqdm = "4.66.1"
typer = "0.9.0"
typing-inspect = "0.9.0"
typing-extensions = "^4.11.0"
tzdata = "2023.3"
urllib3 = "1.26.18"
uvicorn = "0.25.0"
uvloop = "0.19.0"
watchfiles = "0.21.0"
websocket-client = "1.7.0"
websockets = "10.4"
wrapt = "1.16.0"
yarl = "1.9.4"
zipp = "3.17.0"
asyncpg = "0.29.0"
cohere = "4.53"
langsmith = "^0.1.75"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
parameterized = "^0.9.0"
pytest-cov = "^5.0.0"
pypika = "^0.48.9"
langchain-openai = "^0.1.20"
langchainhub = "^0.1.20"
playwright = "1.35"
langgraph = "0.2.3"
transformers = "^4.44.0"
langchain-anthropic = "^0.1.23"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
pyjwt = "^2.9.0"
cryptography = "^43.0.3"
motor = "^3.6.0"
tavily-python = "^0.5.0"
pytesseract = "^0.3.13"
pillow = "^11.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"